# ocrd_olena

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  build-olena.dockerfile  install-futurize.sh  ocrd-olena-binarize  ocrd-olena-sauvola  ocrd-tool.json  olena-add-bin-negate-toggles.patch  olena-configure-boost.patch  olena-configure-python3.patch  olena-disable-doc.patch  olena-fix-magick-load-catch-exceptions.patch  pyproject.toml  requirements.txt
.circleci/: config.yml
ocrd_olena/: cli.py  ocrd-tool.json  processor.py
test/: conftest.py  test.sh  test_ocrd.py
